# aegis-vio

./: .gitignore  README.md  README_EL.md  READMEgr.md  index.html  readmegreek.md  requirements.txt  setup.py
aegis-vio/: setup.py
docs/: INSTALLATION_EL.md  PROJECT_REPORT_EL.md  experiment_004_feature_quality_el.md  experiment_005_visual_uncertainty_el.md  experiment_008_failure_prediction_dataset_el.md  experiment_009_failure_prediction_model_el.md  experiments.md  installation.md  research_plan.md  simulation.md  usage.md
ros2_ws/src/aegis_vio/: package.xml  setup.cfg  setup.py
ros2_ws/src/aegis_vio/aegis_vio/: __init__.py  navigation_node.py  uncertainty_node.py  vio_node.py
ros2_ws/src/aegis_vio/config/: config.yaml  dataset.yaml  ekf.yaml  navigation.yaml
ros2_ws/src/aegis_vio/launch/: aegis_vio.launch.py
ros2_ws/src/aegis_vio/msg/: StateEstimate.msg  UncertaintyMetrics.msg
scripts/: build_failure_prediction_dataset.py  compute_multimodal_uncertainty.py  compute_navigation_modes.py  compute_visual_uncertainty.py  download_euroc.py  evaluate_results.py  plot_feature_quality.py  run_euroc.py  run_euroc_feature_tracking.py  run_experiment_suite.py  run_feature_quality_analysis.py  run_feature_tracking.py  run_simulation.py  run_synthetic_feature_tracking.py  run_uncertainty_demo.py  train_failure_predictor.py
src/: __init__.py  dataset_loader.py  ekf.py  evaluator.py  feature_tracker.py  imu_integrator.py  navigation.py  uncertainty.py  uncertainty_aware_controller.py  vio_estimator.py  visualization.py
tests/: __init__.py  test_dataset_loader.py  (+6 more)
(+23 files in other folders)
