<?xml version="1.0"?>
<package format="3">
  <name>aegis_vio</name>
  <version>0.1.0</version>
  <description>ROS2 package for uncertainty-aware visual-inertial navigation.</description>
  <maintainer email="p.g2a15@gmail.com">Panagiota Grosdouli</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
